fixing slider text on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -1119,7 +1119,7 @@ figure:focus figcaption {
 
 @media screen and (max-width: 768px) {
   .slides-text {
-    padding-top: 150px;
+    padding-top: 50px;
   }
 }
 
